// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";
package io.harness.eventsframework.schemas.entitysetupusage;

import "970-ng-commons/src/main/proto/io/harness/eventsframework/schemas/entity/entity_detail.proto";
import "953-events-api/src/main/proto/io/harness/eventsframework/schemas/entitysetupusage/entity_detail_with_setup_usage_detail.proto";

option java_multiple_files = true;
option go_package = "953_events_api";

message EntitySetupUsageCreateV2DTO {
  string accountIdentifier = 1;
  repeated io.harness.eventsframework.schemas.entity.EntityDetailProtoDTO referredEntities = 2;
  io.harness.eventsframework.schemas.entity.EntityDetailProtoDTO referredByEntity = 3;
  int64 createdAt = 4;
  bool deleteOldReferredByRecords = 5;
  repeated io.harness.eventsframework.schemas.entitysetupusage.EntityDetailWithSetupUsageDetailProtoDTO
      referredEntityWithSetupUsageDetail = 6;
}
